--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "neo4j-js": "0.0.8",
     "seraph": "^0.9.12",
     "loopback-connector-neo4j": "https://github.com/denisbetsi/loopback-connector-neo4j/tarball/master",
-    "loopback-connector-couch": "*",
+    "loopback-connector-couch": "*"
   },
   "license": {
     "name": "Dual MIT/StrongLoop",
